--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -18949,12 +18949,12 @@ references:
   commentId: T:WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens
   fullName: WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens
   nameWithType: QuestMalfurionAwakens
-- uid: WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.#ctor(Rectangle)
-  name: QuestMalfurionAwakens(Rectangle)
-  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.html#WarcraftLegacies_Source_Quests_Druids_QuestMalfurionAwakens__ctor_Rectangle_
-  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.#ctor(Rectangle)
-  fullName: WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.QuestMalfurionAwakens(Rectangle)
-  nameWithType: QuestMalfurionAwakens.QuestMalfurionAwakens(Rectangle)
+- uid: WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.#ctor(Rectangle,unit)
+  name: QuestMalfurionAwakens(Rectangle, unit)
+  href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.html#WarcraftLegacies_Source_Quests_Druids_QuestMalfurionAwakens__ctor_Rectangle_unit_
+  commentId: M:WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.#ctor(Rectangle,unit)
+  fullName: WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.QuestMalfurionAwakens(Rectangle, unit)
+  nameWithType: QuestMalfurionAwakens.QuestMalfurionAwakens(Rectangle, unit)
 - uid: WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.#ctor*
   name: QuestMalfurionAwakens
   href: api-source/WarcraftLegacies.Source.Quests.Druids.QuestMalfurionAwakens.html#WarcraftLegacies_Source_Quests_Druids_QuestMalfurionAwakens__ctor_
