--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -7964,30 +7964,18 @@ references:
   commentId: T:MacroTools.Mechanics.StructurePacking.PackableStructure
   fullName: MacroTools.Mechanics.StructurePacking.PackableStructure
   nameWithType: StructurePacking.PackableStructure
-- uid: MacroTools.Mechanics.StructurePacking.PackableStructure._buildAbility
-  name: _buildAbility
-  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure__buildAbility
-  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure._buildAbility
-  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure._buildAbility
-  nameWithType: StructurePacking.PackableStructure._buildAbility
-- uid: MacroTools.Mechanics.StructurePacking.PackableStructure._packedUnitId
-  name: _packedUnitId
-  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure__packedUnitId
-  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure._packedUnitId
-  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure._packedUnitId
-  nameWithType: StructurePacking.PackableStructure._packedUnitId
-- uid: MacroTools.Mechanics.StructurePacking.PackableStructure._structureId
-  name: _structureId
-  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure__structureId
-  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure._structureId
-  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure._structureId
-  nameWithType: StructurePacking.PackableStructure._structureId
-- uid: MacroTools.Mechanics.StructurePacking.PackableStructure._structureModel
-  name: _structureModel
-  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure__structureModel
-  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure._structureModel
-  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure._structureModel
-  nameWithType: StructurePacking.PackableStructure._structureModel
+- uid: MacroTools.Mechanics.StructurePacking.PackableStructure.BuildAbility
+  name: BuildAbility
+  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure_BuildAbility
+  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure.BuildAbility
+  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure.BuildAbility
+  nameWithType: StructurePacking.PackableStructure.BuildAbility
+- uid: MacroTools.Mechanics.StructurePacking.PackableStructure.PackedUnitId
+  name: PackedUnitId
+  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure_PackedUnitId
+  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure.PackedUnitId
+  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure.PackedUnitId
+  nameWithType: StructurePacking.PackableStructure.PackedUnitId
 - uid: MacroTools.Mechanics.StructurePacking.PackableStructure.PackUnitSetup(unit)
   name: PackUnitSetup(unit)
   href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure_PackUnitSetup_unit_
@@ -8014,6 +8002,18 @@ references:
   isSpec: "True"
   fullName: MacroTools.Mechanics.StructurePacking.PackableStructure.Register
   nameWithType: StructurePacking.PackableStructure.Register
+- uid: MacroTools.Mechanics.StructurePacking.PackableStructure.StructureId
+  name: StructureId
+  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure_StructureId
+  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure.StructureId
+  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure.StructureId
+  nameWithType: StructurePacking.PackableStructure.StructureId
+- uid: MacroTools.Mechanics.StructurePacking.PackableStructure.StructureModel
+  name: StructureModel
+  href: api-macroTools/MacroTools.Mechanics.StructurePacking.PackableStructure.html#MacroTools_Mechanics_StructurePacking_PackableStructure_StructureModel
+  commentId: F:MacroTools.Mechanics.StructurePacking.PackableStructure.StructureModel
+  fullName: MacroTools.Mechanics.StructurePacking.PackableStructure.StructureModel
+  nameWithType: StructurePacking.PackableStructure.StructureModel
 - uid: MacroTools.Mechanics.TwilightHammer
   name: MacroTools.Mechanics.TwilightHammer
   href: api-macroTools/MacroTools.Mechanics.TwilightHammer.html
